--- a/FireAlarmApplication.Web/appsettings.Development.json
+++ b/FireAlarmApplication.Web/appsettings.Development.json
@@ -10,15 +10,34 @@
 
   "FireGuard": {
     "NasaFirms": {
-      "ApiKey": "YOUR_DEVELOPMENT_API_KEY"
+      "BaseUrl": "https://firms.modaps.eosdis.nasa.gov/",
+      "ApiKey": "96e83b5b80480229cc68df5af479f030",
+      "DefaultArea": "36,26,42,45",
+      "DefaultDayRange": 1
+    },
+
+    "Cache": {
+      "DefaultExpirationMinutes": 15,
+      "FireDataExpirationMinutes": 5,
+      "UserSessionExpirationHours": 24
+    },
+
+    "RabbitMQ": {
+      "HostName": "localhost",
+      "Port": 5672,
+      "UserName": "fireguard",
+      "Password": "fireguard123",
+      "VirtualHost": "/"
     }
   },
 
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "FireGuard": "Trace"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "FireGuard": "Debug"
     }
-  }
+  },
+
+  "AllowedHosts": "*"
 }
