--- a/FireAlarmApplication.Web/appsettings.json
+++ b/FireAlarmApplication.Web/appsettings.json
@@ -11,7 +11,7 @@
   "FireGuard": {
     "NasaFirms": {
       "BaseUrl": "https://firms.modaps.eosdis.nasa.gov/",
-      "ApiKey": "YOUR_NASA_FIRMS_API_KEY",
+      "ApiKey": "96e83b5b80480229cc68df5af479f030",
       "DefaultArea": "36,26,42,45",
       "DefaultDayRange": 1
     },
