--- a/FireAlarmApplication.Web/FireAlarmApplication.Web.csproj
+++ b/FireAlarmApplication.Web/FireAlarmApplication.Web.csproj
@@ -13,8 +13,11 @@
 	<ItemGroup>
 		<PackageReference Include="MediatR" Version="12.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+		<PackageReference Include="NetTopologySuite" Version="2.6.0" />
+		<PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
 
 		<!-- Redis -->
 		<PackageReference Include="StackExchange.Redis" Version="2.7.10" />
