--- a/FireAlarmApplication.Web/FireAlarmApplication.Web.csproj
+++ b/FireAlarmApplication.Web/FireAlarmApplication.Web.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+		<PackageReference Include="Polly" Version="8.6.3" />
 
 		<!-- Redis -->
 		<PackageReference Include="StackExchange.Redis" Version="2.7.10" />
