--- a/FireAlarmApplication.Web/appsettings.Development.json
+++ b/FireAlarmApplication.Web/appsettings.Development.json
@@ -1,10 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=FireGuardDB;Username=fireguard;Password=fireguard123",
+    "DefaultConnection": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
     "FireDetectionDB": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
-    "AlertDB": "Host=localhost;Database=AlertDB;Username=fireguard;Password=fireguard123",
-    "UserDB": "Host=localhost;Database=UserDB;Username=fireguard;Password=fireguard123",
-    "NotificationDB": "Host=localhost;Database=NotificationDB;Username=fireguard;Password=fireguard123",
     "Redis": "localhost:6379"
   },
 
@@ -12,7 +9,7 @@
     "NasaFirms": {
       "BaseUrl": "https://firms.modaps.eosdis.nasa.gov/",
       "ApiKey": "96e83b5b80480229cc68df5af479f030",
-      "DefaultArea": "36,26,42,45",
+      "DefaultArea": "36.2,26.0,42.0,43.2",
       "DefaultDayRange": 1
     },
 
