--- a/FireAlarmApplication.Web/appsettings.json
+++ b/FireAlarmApplication.Web/appsettings.json
@@ -1,10 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=FireGuardDB;Username=fireguard;Password=fireguard123",
+    "DefaultConnection": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
     "FireDetectionDB": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
-    "AlertDB": "Host=localhost;Database=AlertDB;Username=fireguard;Password=fireguard123",
-    "UserDB": "Host=localhost;Database=UserDB;Username=fireguard;Password=fireguard123",
-    "NotificationDB": "Host=localhost;Database=NotificationDB;Username=fireguard;Password=fireguard123",
     "Redis": "localhost:6379"
   },
 
