--- a/FireAlarmApplication.Shared.Contracts/FireAlarmApplication.Shared.Contracts.csproj
+++ b/FireAlarmApplication.Shared.Contracts/FireAlarmApplication.Shared.Contracts.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="2.6.0" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
