--- a/FireAlarmApplication.Web/appsettings.json
+++ b/FireAlarmApplication.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
-    "FireDetectionDB": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123",
+    "DefaultConnection": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123;Search Path=fire_detection,public",
+    "FireDetectionDB": "Host=localhost;Database=FireDetectionDB;Username=fireguard;Password=fireguard123;Search Path=fire_detection,public",
     "Redis": "localhost:6379"
   },
 
