--- a/FireAlarmApplication.Web/appsettings.json
+++ b/FireAlarmApplication.Web/appsettings.json
@@ -43,5 +43,9 @@
     }
   },
 
+  "Jwt": {
+    "Key": "fZ7@Qp1!vL4$rT9#xW2^mB8&nH6*kD3%Gy5+Jc0?SaEeUvYwRjFhZtPqLsMdNb"
+  },
+
   "AllowedHosts": "*"
 }
