--- a/FireAlarmApplication.Web/appsettings.json
+++ b/FireAlarmApplication.Web/appsettings.json
@@ -47,5 +47,10 @@
     "Key": "fZ7@Qp1!vL4$rT9#xW2^mB8&nH6*kD3%Gy5+Jc0?SaEeUvYwRjFhZtPqLsMdNb"
   },
 
+  "Email": {
+    "FromEmail": "kubilaytopaktass@gmail.com",
+    "FromPassword": "gxiw onbz maiq pvwb"
+  },
+
   "AllowedHosts": "*"
 }
